test/fail/issue-5336.mo
//MOC-FLAG --require-persistent-actors
import Actor "issue-5336/actor";

persistent actor class Main() {};
